@@ -1,5 +1,7 @@
 2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-sum.el (gnus-newsgroup-recent): Removed.
+
 	* gnus-spec.el (gnus-lrm-string-p): `bidi-string-mark-left-to-right'
 	has been renamed.
 	(gnus-lrm-string-p): Include RLM and PDF, too.
